@@ -1,4 +1,5 @@
 Development
+	Implement PlayPause JS method
 	Make sure dbus dispatcher is stopped
 	Use private dbus connection
 0.5.0
